welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: not found: value plat0
  return plat0}
         ^